= Red Eclipse SVN (unreleased) =
Gameplay:
 * Increased overall AI skill
 * Disable double-tap dashing by default

Weapons:
 * Plasma primary damage and explosion radius increased

Maps:
 * Assigned map music to all maps
 * Canals, updated and added to rotations
 * Fourplex, updated
 * Starlibido, updated

Modes & Mutators:
 * Number of bots in coop reduced to 3/2 of humans

Additional fixed bugs:
 * #218 - can no longer drop your loadout weapons in arena
 * #223 - can no longer use common file-writing commands from a map script


= Red Eclipse 1.3.1 =
Maps:
 * Canals, removed from rotations

Modding & Data Assets:
 * arid skybox added

Multiplayer & Servers:
 * Fix IRC relaying

Core & Install:
 * Fix "msvcr100.dll missing" bug on Windows


= Red Eclipse 1.3 =
Gameplay:
 * New "impulse vaulting" movement (press Q next to an obstacle to use it to propel yourself upward)
 * Points no longer given for consecutively dropping and picking up affinities (flags/ball)
 * AI now uses "random walk" when no waypoints are present
 * Players in time trial are now non-solid by default (/{sv_}trialstyle)

Weapons:
 * Rocket launcher now spawns in instagib
 * Melee no longer requires an impulse action before (back to 1.1 behaviour)
 * Flamer primary and secondary range and size reduced, secondary fire lifetime of particles increased
 * Pistol recoil slightly increased, secondary now fires twice as many particles with more spread, but with less damage and longer intervals
 * SMG secondary now fires balls which after a short distance explodes into a large amount of radial flak
 * Shotgun recoil increased
 * Plasma primary damage and radius reduced, primary and secondary recoil increased
 * Rifle recoil increased

Maps:
 * Institute, new map
 * Biolytic, new map
 * Ares, updated to version 1.9
 * Conflict, new map
 * Fourplex, new map
 * Starlibido, new map
 * Industrial, new map
 * Oneiroi, new map
 * Pumpstation, new map
 * Dawn, removed from rotations